# Compiler

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: AST.h  ast.cpp  ast.h  ir.cpp  ir.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  semantic.cpp  semantic.h  token.cpp  token.h  type.cpp  type.h
test/: CMakeLists.txt  test.cpp  test_parser.cpp
test/parser/: if1.in
test/testcases/: array1.in  expr3.in  if2.in  loop1.in  loop3.in  loop4.in  loop5.in  ref1.in  ref2.in  ref4.in  ref5.in  ref6.in  type1.in  type3.in  type4.in  type5.in  type6.in  type7.in
test/testcases-my/: CMakeLists.txt  test.cpp
test/testcases-my/testcases/: array2.in  expr1.in  expr2.in  if1.in  if3.in  loop2.in  loop6.in  ref3.in  ref7.in  ref8.in  type1.in  type2.in  type3.in  type8.in
test/wxzheng/: CMakeLists.txt  auto-crawl.py  test.cpp
test/wxzheng/testcases/: comprehensive12.in
